add image support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="prompt_ingredient_name">ingredient name</string>
     <string name="prompt_ingredient_amount">amount</string>
     <string name="prompt_ingredient_unit">unit</string>
+    <string name="image_description">Cookie image</string>
 </resources>
